--- a/webapp/src/css/style.css
+++ b/webapp/src/css/style.css
@@ -31,11 +31,19 @@ body {
 
 #bottomLinks {
     font-family: "Pixelated MS Sans Serif", Arial, sans-serif;
+    background-color: silver;
+    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,inset -2px -2px grey, inset 2px 2px #fff;
+    padding: 0.95em;
+    margin: 0px;
+    left: 0;
+    right: 0;
+    transform: unset;
+    text-align: center;
 
     li {
-        display: inline;
+        padding: 0.2em;
+        display: inline-block;
         border-right: 1px solid black;
-        padding: 0;
         margin: 0;
         padding-right: 0.2rem;
         margin-right: 0.2rem;
@@ -152,14 +160,17 @@ body {
 
 #chatBar {
     margin: 0;
-    padding: 0;
     position: fixed;
-    bottom: 4px;
     left: 0;
     right: 0;
+    bottom: 0;
     display: flex;
     width: 100%;
-    height: 4vh;
+    background-color: silver;
+    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,inset -2px -2px grey, inset 2px 2px #fff;
+    height: 3vh;
+    padding: 4px;
+    padding-left: 0px;
 }
 
 #chatInput {
@@ -169,7 +180,7 @@ body {
     height: 100%;
 }
 
-#chatSentBtn {
+#chatSendBtn {
     font-weight: bold;
     margin-right: 4px;
 }
@@ -196,6 +207,10 @@ body {
 
 .context-menu {
     background-color: silver;
+    box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,inset -2px -2px grey, inset 2px 2px #fff;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    z-index: 1;
     ul {
         list-style: none;
         padding: 0;
@@ -204,18 +219,21 @@ body {
 }
 
 .context-menu-item {
-    padding-right: 0.2rem;
     padding-left: 0.2rem;
     font-size: 11px;
     
     padding-bottom: 0.2rem;
     padding-top: 0.2rem;
 
-    margin-top: 0.3rem;
-    margin-bottom: 0.3rem;
     font-family: "Pixelated MS Sans Serif", Arial;
 
     cursor: pointer;
+
+    padding: 5px;
+    padding-right: 5em;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    list-style-type: none;
 }
 
 .context-menu-item:hover {
